fixed scrollbar being away from right container

--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -46,7 +46,7 @@
   display: block;
   margin: 2.5rem 0;
   width: auto;
-  height: 100%;
+  height: 200px;
   overflow: hidden;
 }
 
@@ -67,13 +67,13 @@
   opacity: 0.6;
 }
 
-.articleWrapper {
+.articleWrapper article {
   width: 100%;
-  height: 500px !important;
+  height: 550px !important;
   overflow-y: scroll;
 }
 
 .blog {
-  height: 500px !important;
+  max-height: 550px !important;
   overflow-y: scroll;
 }
